--- a/components/CountdownTimer.html
+++ b/components/CountdownTimer.html
@@ -32,7 +32,7 @@
     <div class="take-date">
         <form>
             <label class="Countdown-date" for="countdown">Choose Date : </label>
-            <input class="Countdown-date" id="date-c" type="date">
+            <input class="Countdown-date" id="date-c" type="datetime-local">
             <button type="button" id="reset">Reset</button>
         </form>
     </div>
