--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 {
   color: #f47321;
   /* text-shadow: 2px 2px #ff0000; */
   /* font-size: 20px; */
+  
 }
 .Countdown-date {
   font-size: 20px;
@@ -88,6 +89,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: -42px;
 }
 
 .slide {
@@ -108,6 +110,8 @@ body {
   justify-content: space-evenly;
   align-items: center;
   gap: 15px;
+  flex-wrap: wrap;
+ 
 }
 
 .card {
