--- a/components/style.css
+++ b/components/style.css
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: 100px;
+  flex-wrap: wrap;
+  margin-top: 100px;
 }
 .circle-wrap {
   /* margin: 150px auto; */
