styled countdown timer
issue #49

--- a/components/CountdownTimer.html
+++ b/components/CountdownTimer.html
@@ -26,7 +26,7 @@
         <div class="outline"></div>
         <div class="circle"></div>
         <h1>CountDown Setter</h1>
-        <button style=" margin-top:30px;  margin-bottom: 30px;"  type="button" onclick="document.getElementById('demo').innerHTML = Date()"> Click me to display current Date and Time.</button>
+        <button class="btn"  type="button" onclick="document.getElementById('demo').innerHTML = Date()"> Click me to display current Date and Time.</button>
         <p id="demo"></p>
     </div>
     <div class="take-date">
