--- a/Pages/Musicapp/style.css
+++ b/Pages/Musicapp/style.css
@@ -18,8 +18,10 @@ body {
 
 .music-card {
     display: flex;
+    border-radius: 15px;
+    box-shadow: black 2px 2px 7px;
     align-items: center;
-    margin-bottom: 0.5em;
+    margin-bottom: 2em;
     cursor: pointer;
     background-color: rgb(0 0 0 / 40%);
     padding: 2em;
