--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: linear-gradient(to right top, #06002a, #08164c, #0d2672, #11369a, #1148c4, #0063da, #007eed, #0098ff, #00b7ff, #00d3ff, #00ebf1, #00ffd4);
+  background: linear-gradient(to right, #000000, #434343); 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,7 +23,7 @@ body {
 
 nav {
   height: 15vh;
-  background-color: #152932;
+  background-color: #000000;
 }
 
 .sticky {
@@ -375,11 +375,11 @@ nav {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: aqua;
+  background-color:rgb(255, 255, 255);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(58 58 173);
+  background-color: rgb(158, 158, 162);
   background-clip: content-box;
   border: 2px solid transparent;
   border-radius: 15px;
